--- a/styles/main.css
+++ b/styles/main.css
@@ -2,14 +2,17 @@
 :root {
   h1 {
     color: #313030;
+    font-family: 'Quicksand', sans-serif;
   }
 
   h2 {
     color: #313030;
+    font-family: 'Quicksand', sans-serif;
   }
 
   p {
     color: #313030;
+    font-family: 'Quicksand', sans-serif;
   }
 
   body {
