--- a/styles/main.css
+++ b/styles/main.css
@@ -83,6 +83,43 @@ section {
   height: 18vh;
 }
 
+/*Mobile layout*/
+
+@media screen and (max-width: 500px) {
+  #navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #main-menu {
+    /*display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    height: 20vh;
+  }
+
+  #menu-title {
+    padding-top: 8vh;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
+  }
+
+  .menu-item {
+    padding: 10px;
+  }
+}
+
+/*Tablet layout*/
+
 /*Homepage color scheme*/
 .dark-green {
   background-color: #7bb34d;
