--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,10 @@ header {
   padding-right: 10px;
 }
 
+.menu-item:hover {
+  background-color: #85be56;
+}
+
 .menu-link {
   font-family: 'Quicksand', sans-serif;
   color: #313030;
@@ -91,6 +95,7 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
   }
 
   #main-menu {
@@ -103,6 +108,7 @@ section {
 
   #menu-title {
     padding-top: 8vh;
+    padding-bottom: 1vh;
   }
 
   header {
@@ -114,7 +120,13 @@ section {
   }
 
   .menu-item {
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    width: 100%;
+    box-shadow: 0px 1px #b2e08f;
+    margin: 0;
   }
 
   .menu-link {
