--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 header {
   display: flex;
   justify-content: space-between;
