--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,11 @@ h2 {
   font-family: 'Quicksand', sans-serif;
 }
 
+h3 {
+  color: #313030;
+  font-family: 'Quicksand', sans-serif;
+}
+
 p {
   color: #313030;
   font-family: 'Quicksand', sans-serif;
@@ -104,6 +109,7 @@ footer {
 
 /*}
 
+
 /*Section styles*/
 section {
   padding: 30px;
@@ -131,6 +137,8 @@ img {
   height: auto;
   position: relative;
 }
+
+/*Blog article layout */
 
 /*Mobile layout*/
 
