Amend hero section selector to best practice

--- a/styles/main.css
+++ b/styles/main.css
@@ -207,7 +207,7 @@ img {
 
 /*Homepage color scheme*/
 
-.hero-section {
+#hero-section {
   background-color: #e7e4ff;
   border-bottom: black solid 2px;
 }
