Add styles for article layout

--- a/styles/main.css
+++ b/styles/main.css
@@ -232,3 +232,10 @@ img {
   background-color: #e9b0fa;
   padding: 2px;
 }
+
+/*Blog article layout*/
+
+.article-layout {
+  margin-left: 20vw;
+  margin-right: 20vw;
+}
