--- a/styles/main.css
+++ b/styles/main.css
@@ -200,7 +200,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 10vh; */
+    flex-grow: 1;
   }
 }
 
