--- a/styles/main.css
+++ b/styles/main.css
@@ -148,6 +148,28 @@ img {
   position: relative;
 }
 
+/*Blog article layout*/
+
+.article-layout {
+  padding: 5vw 20vw 5vw 20vw;
+}
+
+.paragraph-spacing {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.article-date {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+time {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+
 /*Mobile layout*/
 
 @media screen and (max-width: 600px) {
@@ -209,6 +231,11 @@ img {
     align-items: center;
     flex-grow: 1;
   }
+
+  .article-layout {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
 }
 
 /*Website color scheme*/
@@ -237,28 +264,6 @@ img {
 .highlight {
   background-color: #e9b0fa;
   padding: 2px;
-}
-
-/*Blog article layout*/
-
-.article-layout {
-  padding: 5vw 20vw 5vw 20vw;
-}
-
-.paragraph-spacing {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.article-date {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-time {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
 }
 
 /* Code examples styling */
