--- a/styles/main.css
+++ b/styles/main.css
@@ -31,13 +31,22 @@ ul {
 }
 
 p,
-li {
+li,
+a {
   color: #313030;
   font-family: 'Quicksand', sans-serif;
   padding: 5px;
   font-size: 18px;
   font-weight: 500;
   line-height: 1.5em;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 code {
@@ -172,6 +181,27 @@ time {
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
   font-size: 18px;
+}
+
+/*About me layout*/
+
+.two-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 5%;
+  margin-right: 5%;
+}
+
+.two-column-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 10%;
+  margin-left: 10%;
+  border: 4px solid #b2e08f;
 }
 
 /*Mobile layout*/
