--- a/styles/main.css
+++ b/styles/main.css
@@ -72,6 +72,22 @@ article > h2 > a:hover {
   text-decoration: underline;
 }
 
+figure {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+figcaption,
+figcaption > a {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+figcaption > a:hover {
+  text-decoration: underline;
+}
+
 /*Menu layout*/
 
 header {
