--- a/styles/main.css
+++ b/styles/main.css
@@ -88,6 +88,22 @@ figcaption > a:hover {
   text-decoration: underline;
 }
 
+button {
+  border: 2px solid #313030;
+  background: none;
+  border-radius: 0%;
+  margin: 5px;
+}
+
+button:hover {
+  background-color: #313030;
+}
+
+button > a:hover {
+  color: #9fe16d;
+  text-decoration: none;
+}
+
 /*Menu layout*/
 
 header {
