--- a/styles/main.css
+++ b/styles/main.css
@@ -117,10 +117,10 @@ header {
   padding: 15px;
 }
 
+/*
 #main-menu {
-  /* height: 10vh; */
-}
-
+ height: 10vh;
+} */
 #navigation {
   display: flex;
   justify-content: space-around;
