Add new class for horizontal columns

--- a/styles/main.css
+++ b/styles/main.css
@@ -186,6 +186,11 @@ section {
   padding: 5px;
 }
 
+.horizontal-column {
+  display: flex;
+  flex-direction: column;
+}
+
 img {
   max-width: 100%;
   height: auto;
